--- a/test/Dockerfile-ubuntu-18.04
+++ b/test/Dockerfile-ubuntu-18.04
@@ -7,4 +7,4 @@ COPY . /home/test/localops
 RUN chown -R test:test /home/test/localops
 
 # TODO Add script to test all playbooks
-CMD ["su test -c 'cd ~/localops && ./bootstrap.sh'"]
+CMD ["su test -c 'cd ~/localops && ./bootstrap.sh && . ~/.profile && ./localops-cli.sh aws-cli.yaml'"]
