--- a/create-user-bin.yaml
+++ b/create-user-bin.yaml
@@ -11,3 +11,14 @@
       lineinfile:
         path: ~/.bashrc
         line: PATH="$HOME/bin:$PATH"
+
+    - name: Create ~/.local/bin
+      file:
+        path: ~/.local/bin
+        mode: '744'
+        state: directory
+
+    - name: Add ~/.local/bin to PATH
+      lineinfile:
+        path: ~/.bashrc
+        line: PATH="$HOME/.local/bin:$PATH"
