Updated apt key URL; added arch amd64 to repo definition

--- a/spotify.yaml
+++ b/spotify.yaml
@@ -5,14 +5,14 @@
       become: yes
       become_user: root
       apt_key:
-        url: https://download.spotify.com/debian/pubkey.gpg
+        url: https://download.spotify.com/debian/pubkey_0D811D58.gpg
         state: present
 
     - name: Add Spotify apt repo
       become: yes
       become_user: root
       apt_repository:
-        repo: deb http://repository.spotify.com stable non-free
+        repo: deb [arch=amd64] http://repository.spotify.com stable non-free
         state: present
 
     - name: Update apt cache, if older than a day
