--- a/codacy-analysis-cli.yaml
+++ b/codacy-analysis-cli.yaml
@@ -2,6 +2,7 @@
   import_playbook: create-user-bin.yaml
 
 - hosts: all
+  gather_facts: false
   tasks:
 
   - name: Get codacy-analysis-cli latest version
