--- a/docker.yaml
+++ b/docker.yaml
@@ -5,58 +5,59 @@
   import_playbook: create-user-bin.yaml
 
 - hosts: all
+  gather_facts: false
   tasks:
 
-    - name: Add Docker apt repository signing key
-      become: yes
-      become_user: root
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
+  - name: Add Docker apt repository signing key
+    become: yes
+    become_user: root
+    apt_key:
+      url: https://download.docker.com/linux/ubuntu/gpg
+      state: present
 
-    - name: Add Docker apt repo
-      become: yes
-      become_user: root
-      apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
-        state: present
+  - name: Add Docker apt repo
+    become: yes
+    become_user: root
+    apt_repository:
+      repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
+      state: present
 
-    - name: Update apt cache, if older than a day
-      become: yes
-      become_user: root
-      apt:
-        update_cache: yes
-        cache_valid_time: 86400
+  - name: Update apt cache, if older than a day
+    become: yes
+    become_user: root
+    apt:
+      update_cache: yes
+      cache_valid_time: 86400
 
-    - name: Install Docker
-      become: yes
-      become_user: root
-      apt:
-        state: latest
-        pkg: docker-ce
+  - name: Install Docker
+    become: yes
+    become_user: root
+    apt:
+      state: latest
+      pkg: docker-ce
 
-    - name: Get docker-compose latest version
-      shell: "curl -Ls -o /dev/null -w %{url_effective} https://github.com/docker/compose/releases/latest | sed -e 's|.*/||'"
-      args:
-        warn: false
-      register: version
+  - name: Get docker-compose latest version
+    shell: "curl -Ls -o /dev/null -w %{url_effective} https://github.com/docker/compose/releases/latest | sed -e 's|.*/||'"
+    args:
+      warn: false
+    register: version
 
-    - name: Install docker-compose
-      get_url:
-        url: https://github.com/docker/compose/releases/download/{{ version.stdout }}/docker-compose-Linux-x86_64
-        dest: "~/bin/docker-compose-{{ version.stdout }}"
-        mode: '744'
+  - name: Install docker-compose
+    get_url:
+      url: https://github.com/docker/compose/releases/download/{{ version.stdout }}/docker-compose-Linux-x86_64
+      dest: "~/bin/docker-compose-{{ version.stdout }}"
+      mode: '744'
 
-    - name: Create a symbolic link
-      file:
-        src: "~/bin/docker-compose-{{ version.stdout }}"
-        dest: ~/bin/docker-compose
-        state: link
+  - name: Create a symbolic link
+    file:
+      src: "~/bin/docker-compose-{{ version.stdout }}"
+      dest: ~/bin/docker-compose
+      state: link
 
-    - name: Add this user to group docker
-      become: yes
-      become_user: root
-      user:
-        name: "{{ ansible_user_id }}"
-        groups: docker
-        append: yes
+  - name: Add this user to group docker
+    become: yes
+    become_user: root
+    user:
+      name: "{{ ansible_user_id }}"
+      groups: docker
+      append: yes
