--- a/spring-boot-cli.yaml
+++ b/spring-boot-cli.yaml
@@ -5,6 +5,7 @@
   import_playbook: create-user-bin.yaml
 
 - hosts: all
+  gather_facts: false
   tasks:
 
   - name: Get Spring Boot CLI latest version
