--- a/curl.yaml
+++ b/curl.yaml
@@ -1,16 +1,17 @@
 - hosts: all
+  gather_facts: false
   tasks:
 
-    - name: Update apt cache, if older than a day
-      become: yes
-      become_user: root
-      apt:
-        update_cache: yes
-        cache_valid_time: 86400
+  - name: Update apt cache, if older than a day
+    become: yes
+    become_user: root
+    apt:
+      update_cache: yes
+      cache_valid_time: 86400
 
-    - name: Install curl
-      become: yes
-      become_user: root
-      apt:
-        state: latest
-        pkg: curl
+  - name: Install curl
+    become: yes
+    become_user: root
+    apt:
+      state: latest
+      pkg: curl
