--- a/localstack.yaml
+++ b/localstack.yaml
@@ -1,9 +1,10 @@
 - import_playbook: pip.yaml
 
 - hosts: all
+  gather_facts: false
   tasks:
 
-    - name: Install LocalStack
-      pip:
-        name: localstack
-        state: latest
+  - name: Install LocalStack
+    pip:
+      name: localstack
+      state: latest
