--- a/nginx.yaml
+++ b/nginx.yaml
@@ -2,25 +2,26 @@
   import_playbook: certificate-authority.yaml
 
 - hosts: all
+  gather_facts: false
   tasks:
 
-    - name: Update apt cache, if older than a day
-      become: yes
-      become_user: root
-      apt:
-        update_cache: yes
-        cache_valid_time: 86400
+  - name: Update apt cache, if older than a day
+    become: yes
+    become_user: root
+    apt:
+      update_cache: yes
+      cache_valid_time: 86400
 
-    - name: Install Nginx
-      become: yes
-      become_user: root
-      apt:
-        state: latest
-        pkg: nginx
+  - name: Install Nginx
+    become: yes
+    become_user: root
+    apt:
+      state: latest
+      pkg: nginx
 
-    - name: Remove symlink to default site
-      become: yes
-      become_user: root
-      file:
-        path: /etc/nginx/sites-enabled/default
-        state: absent
+  - name: Remove symlink to default site
+    become: yes
+    become_user: root
+    file:
+      path: /etc/nginx/sites-enabled/default
+      state: absent
