--- a/microk8s.yaml
+++ b/microk8s.yaml
@@ -19,8 +19,10 @@
 - name: Install kubectl
   import_playbook: kubectl.yaml
 
+- name: Install kubeval
+  import_playbook: kubeval.yaml
+
 - hosts: all
-  gather_facts: false
   tasks:
 
   - name: Install microk8s with option --classic
@@ -36,11 +38,11 @@
       path: ~/.bashrc
       line: PATH="/snap/bin:$PATH"
 
-  # FIXME Probably should enable other addons, too. See https://microk8s.io/docs/addons
-  - name: Deploy CoreDNS
+  # See https://microk8s.io/docs/addons
+  - name: Deploy Add ons
     become: yes
     become_user: root
-    shell: "/snap/bin/microk8s enable dns"
+    shell: "/snap/bin/microk8s enable dns storage metallb:$(hostname -I | awk '{print $1}')/32"
 
   - name: Add this user to group microk8s
     become: yes
@@ -90,31 +92,6 @@
 
   - name: Update direnv config
     shell: direnv allow
-
-  # FIXME This code is replicated in jenkins.yaml. Refactor using a module
-  - name: Get kubeval latest version
-    shell: "curl -Ls -o /dev/null -w %{url_effective} https://github.com/instrumenta/kubeval/releases/latest | sed -e 's|.*/||'"
-    args:
-      warn: false
-    register: kubeval_version
-
-  - name: Download kubeval
-    unarchive:
-      src: https://github.com/instrumenta/kubeval/releases/download/{{ kubeval_version.stdout }}/kubeval-linux-amd64.tar.gz
-      dest: /tmp
-      remote_src: yes
-
-  - name: Copy kubeval binary to ~/bin
-    copy:
-      src: /tmp/kubeval
-      dest: "~/bin/kubeval-{{ kubeval_version.stdout }}"
-      mode: '0744'
-
-  - name: Create a symbolic link
-    file:
-      src: "~/bin/kubeval-{{ kubeval_version.stdout }}"
-      dest: ~/bin/kubeval
-      state: link
 
   - debug:
       msg: >
