--- a/intellij.yaml
+++ b/intellij.yaml
@@ -9,9 +9,15 @@
       name: intellij-idea-community
       classic: yes
 
+  - name: Create ~/.IdeaIC2019.2/config/plugins
+    file:
+      path: "{{ lookup('env', 'HOME') }}/.IdeaIC2019.2/config/plugins"
+      mode: '744'
+      state: directory
+
   - name: Installs Scala plugin
     unarchive:
       remote_src: yes
       src: https://plugins.jetbrains.com/files/1347/71120/scala-intellij-bin-2020.1.1.zip
       # TODO Force previous step to install this version of IntelliJ
-      dest: /home/{{ ansible_user }}/.IdeaIC2019.2/config/plugins
+      dest: "{{ lookup('env', 'HOME') }}/.IdeaIC2019.2/config/plugins"
