--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -16,10 +16,10 @@
     shell: "curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/{{ version.stdout }}/install.sh | bash"
     args:
       warn: false
-      creates: "~/.nvm/nvm.sh"
+      creates: "{{ lookup('env', 'HOME') }}/.nvm/nvm.sh"
 
   # https://github.com/nvm-sh/nvm#usage
   - name: Download, compile, and install the latest release of node
-    shell: 'source ~/.nvm/nvm.sh && nvm install node'
+    shell: "source {{ lookup('env', 'HOME') }}/.nvm/nvm.sh && nvm install node"
     args:
       executable: /bin/bash
